# install-mimic

./: .editorconfig  .gitignore  .perlcriticrc  .tidyallrc  .travis.yml  Cargo.toml  Makefile  README.md  REUSE.toml  cpanfile  install-mimic.1  install-mimic.c  install-mimic.pl  install-mimic.rs  install-mimic_0.3.1.orig.tar.xz.delta  install-mimic_0.3.1.orig.tar.xz.id  install-mimic_0.4.0.orig.tar.xz.delta  install-mimic_0.4.0.orig.tar.xz.id  install-mimic_0.4.1.orig.tar.xz.delta  install-mimic_0.4.1.orig.tar.xz.id  install-mimic_0.4.2.orig.tar.xz.asc  install-mimic_0.4.2.orig.tar.xz.delta  install-mimic_0.4.2.orig.tar.xz.id  mkdocs.yml  pyproject.toml  run-clippy.sh  tox.ini
.reuse/: dep5
debian/: changelog  control  copyright  lintian-overrides  rules  watch
debian/source/: lintian-overrides
debian/tests/: control
debian/upstream/: metadata
docs/: changes.md  download.md  index.md
requirements/: docs.txt
t/: 01-simple.t
